novo arquivo para direcionar ao link de portifólio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -35,32 +34,10 @@
 
     <ul>
       <li>
-        <a href="#" target="_blank">About Victor Rodrigues</a>
-      </li>
-      <li>
-        <a href="#" target="_blank">Hard Skills</a>
-      </li>
-      <li>
-        <a href="#" target="_blank">Completed projects</a>
-
+        <a href="portifolio/index.html" target="_blank"> Visita ao portfolio</a>
       </li>
 
-      <li>
-        <a href="#" target="_blank">Professional Experience</a>
-      </li>
     </ul>
-
-
-
-    <div id="social-links">
-      <a href="https://github.com/Victorodrigues23" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-      <a href="https://www.linkedin.com/in/victor-rodrigues-3b9605205/" target="_blank"><ion-icon
-          name="logo-linkedin"></ion-icon></a>
-
-
-    </div>
-
-
 
   </div>
 
