alteração no txt-sbore onde fala sobre minha pessoa html

--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -164,16 +164,32 @@
 
 
 
-                        <p> 👋 Meu nome é Victor Rodrigues
-                            Sou de Fortaleza/CE. Estou Cursando 3º período de Análise e Desenvolvimento de Sistemas
-                            Descomplica
-                            Faculdade Digital <br></br>
+                        <p> 👋 Meu nome é Victor Rodrigues e sou natural de Fortaleza, no Ceará. Atualmente, estou no 3º
+                            período do curso de Análise e Desenvolvimento de Sistemas na Descomplica Faculdade Digital,
+                            pertencente à Uni America. Estou muito dedicado aos meus estudos e animado para aprender
+                            mais sobre essa área tão fascinante da tecnologia.
+                            <br></br>
 
                             👨‍💻
-                            Atualmente estou me especializando como Desenvolvedor Front-End, estou constantemente
-                            buscando
-                            aprimorar minhas habilidades de programação e Análise, sempre em busca de novos desafios e
-                            oportunidades de aprendizado.
+                            Hoje estou cursando Análise e Desenvolvimento de
+                            Sistemas na Faculdade (Descomplica Uniamérica). Estou focado em me especializar como
+                            Desenvolvedor Front-End, dedicando-me ao aprimoramento das minhas habilidades técnicas e
+                            competências.
+
+                            Atualmente, estou imerso no universo das tecnologias HTML5, CSS3, JavaScript e React,
+                            buscando aprofundar meus conhecimentos e domínio nessas áreas. Através de projetos práticos
+                            e
+                            estudos contínuos, estou fortalecendo minhas habilidades técnicas para me tornar um
+                            profissional qualificado e eficiente.
+
+                            Estou sempre em busca de desafios que me permitam expandir meu conhecimento e aprimorar
+                            minhas habilidades de programação e análise. Sou apaixonado por resolver problemas complexos
+                            e estou aberto a novas oportunidades que me proporcionem crescimento pessoal e profissional.
+
+                            Estou confiante de que minha determinação, paixão pela tecnologia e compromisso com a
+                            excelência podem contribuir de forma significativa para projetos desafiadores. Estou
+                            entusiasmado com a possibilidade de explorar novas oportunidades e aprender com novas
+                            experiências.
                         </p>
                         <div class="btn-social">
                             <a href="https://www.linkedin.com/in/victor-rodrigues-3b9605205/" target="_blank"><button><i
@@ -198,6 +214,9 @@
                 <div class="flex">
                     <div class="img-port" style="background-image: url(../assets/petlife.png);">
                         <div class="overlay">Projeto 1</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(../assets/orlandocity.png);">
+                        <div class="overlay">Projeto 2</div>
                     </div>
                     <div class="img-port" style="background-image: url(../assets/orlandocity.png);">
                         <div class="overlay">Projeto 2</div>
