nova alteração no html

--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -164,31 +164,26 @@
 
 
 
-                        <p> 👋 Meu nome é Victor Rodrigues e sou natural de Fortaleza, no Ceará. Atualmente, estou no 3º
-                            período do curso de Análise e Desenvolvimento de Sistemas na Descomplica Faculdade Digital,
-                            pertencente à Uni America. Estou muito dedicado aos meus estudos e animado para aprender
-                            mais sobre essa área tão fascinante da tecnologia.
-                            <br></br>
 
-                            👨‍💻
-                            Hoje estou cursando Análise e Desenvolvimento de
-                            Sistemas na Faculdade (Descomplica Uniamérica). Estou focado em me especializar como
-                            Desenvolvedor Front-End, dedicando-me ao aprimoramento das minhas habilidades técnicas e
-                            competências.
+
+                        <p>👨‍💻
+                            Olá, sou Victor Rodrigues, natural de Fortaleza, no Ceará. Atualmente, estou no 3º período
+                            do curso de Análise e Desenvolvimento de Sistemas na Faculdade Descomplica UniAmerica. Estou
+                            focado em me especializar como Desenvolvedor Front-End, dedicando-me ao aprimoramento das
+                            minhas habilidades técnicas e competências.
 
                             Atualmente, estou imerso no universo das tecnologias HTML5, CSS3, JavaScript e React,
-                            buscando aprofundar meus conhecimentos e domínio nessas áreas. Através de projetos práticos
-                            e
-                            estudos contínuos, estou fortalecendo minhas habilidades técnicas para me tornar um
+                            buscando aprofundar meus conhecimentos e dominar nessas áreas. Por meio de projetos práticos
+                            e estudos contínuos, estou fortalecendo minhas habilidades técnicas para me tornar um
                             profissional qualificado e eficiente.
 
                             Estou sempre em busca de desafios que me permitam expandir meu conhecimento e aprimorar
                             minhas habilidades de programação e análise. Sou apaixonado por resolver problemas complexos
-                            e estou aberto a novas oportunidades que me proporcionem crescimento pessoal e profissional.
+                            e estou aberto a novas oportunidades que proporcionem crescimento pessoal e profissional.
 
                             Estou confiante de que minha determinação, paixão pela tecnologia e compromisso com a
                             excelência podem contribuir de forma significativa para projetos desafiadores. Estou
-                            entusiasmado com a possibilidade de explorar novas oportunidades e aprender com novas
+                            entusiasmado com a possibilidade de explorar novas oportunidades e aprender com diferentes
                             experiências.
                         </p>
                         <div class="btn-social">
@@ -218,9 +213,7 @@
                     <div class="img-port" style="background-image: url(../assets/orlandocity.png);">
                         <div class="overlay">Projeto 2</div>
                     </div>
-                    <div class="img-port" style="background-image: url(../assets/orlandocity.png);">
-                        <div class="overlay">Projeto 2</div>
-                    </div>
+
 
                 </div>
             </div>
